; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/validator/extr_val_utils.c_sock_list_logentry.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/validator/extr_val_utils.c_sock_list_logentry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock_list = type { i64, i32 }

@.str = private unnamed_addr constant [9 x i8] c"%s cache\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, %struct.sock_list*)* @sock_list_logentry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sock_list_logentry(i32 %0, i8* %1, %struct.sock_list* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.sock_list*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store %struct.sock_list* %2, %struct.sock_list** %6, align 8
  %7 = load %struct.sock_list*, %struct.sock_list** %6, align 8
  %8 = getelementptr inbounds %struct.sock_list, %struct.sock_list* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %20

11:                                               ; preds = %3
  %12 = load i32, i32* %4, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = load %struct.sock_list*, %struct.sock_list** %6, align 8
  %15 = getelementptr inbounds %struct.sock_list, %struct.sock_list* %14, i32 0, i32 1
  %16 = load %struct.sock_list*, %struct.sock_list** %6, align 8
  %17 = getelementptr inbounds %struct.sock_list, %struct.sock_list* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = call i32 @log_addr(i32 %12, i8* %13, i32* %15, i64 %18)
  br label %24

20:                                               ; preds = %3
  %21 = load i32, i32* %4, align 4
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 @verbose(i32 %21, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %22)
  br label %24

24:                                               ; preds = %20, %11
  ret void
}

declare dso_local i32 @log_addr(i32, i8*, i32*, i64) #1

declare dso_local i32 @verbose(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
